<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_gazebo_sensor_plugin</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gowtham@todo.todo">gowtham</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/lib"/>
    <!-- <gazebo_ros gazebo_plugin_path="${prefix}/lib"/> -->
  </export>
</package>
